--- a/index.html
+++ b/index.html
@@ -229,16 +229,16 @@
         <h3 class="text-xl lg:text-4xl font-extrabold">Our New Products</h3>
         <p class="font-medium opacity-80 text-sm lg:text-base px-8 lg:px-60">There are some of our brand new products in given bellow. You can buy these goods easily in here. we provides delivery service too..</p>
       </div>
-      <!-- cards -->
+      <!-- card container -->
       <div class="grid grid-cols-1 lg:grid-cols-2 gap-5 mt-8 lg:mt-12">
           <!-- card 01 -->
-        <div class="shadow-xl flex flex-col lg:flex-row gap-5 p-6 rounded-2xl">
-          <figure class="w-full lg:w-5/12 flex justify-center items-center ">
-            <img src="./images/5.png" alt="jackets" class="rounded-xl w-full lg:w-9/12" />
+        <div class="shadow-xl flex flex-col lg:flex-row  p-6 gap-5 rounded-2xl border">
+          <figure class="w-full lg:w-4/12 flex justify-center items-center ">
+            <img src="./images/5.png" alt="jackets" class="rounded-xl w-full " />
           </figure>
-          <div class="w-full lg:w-7/12 flex flex-col items-start space-y-3">
+          <div class="w-full lg:w-8/12 flex flex-col items-start space-y-3">
             <!-- card icon -->
-            <div class="flex flex-row items-center justify-center space-x-4">
+            <div class="flex flex-row items-center justify-center space-x-4 pt-1">
               <div class="flex items-center justify-center space-x-2">
                 <i class="fa-solid fa-star text-amber-400"></i> 
                 <p>5.0</p>
@@ -254,7 +254,7 @@
             </div>
             <!-- card content -->
             <h2 class="card-title text-xl font-extrabold">World Cup Jacket Football</h2>
-            <p class="font-medium opacity-90 ">It is a beautiful jackets of Bangladesh Football Team </p>
+            <p class="font-medium opacity-90 ">It is a beautiful jackets of Bangladesh Football Team and very Gorgeous. </p>
             <div class="card-actions flex flex-col lg:flex-row gap-5">
               <p class="text-[#FF4240] font-bold">Price - $30.00</p>
               <div class="flex items-center space-x-2">
@@ -264,99 +264,96 @@
             </div>
           </div>
         </div>
-
-        <!-- card 02 -->
-        <div class="bg-base-100 shadow-xl flex flex-col lg:flex-row gap-5 p-6 rounded-2xl">
-          <figure class="">
-            <img src="./images/6.png" alt="jackets" class="rounded-xl" />
+          <!-- card 02 -->
+        <div class="shadow-xl flex flex-col lg:flex-row  p-6 gap-5 rounded-2xl border">
+          <figure class="w-full lg:w-4/12 flex justify-center items-center ">
+            <img src="./images/6.png" alt="jackets" class="rounded-xl w-full " />
           </figure>
-          <div class="flex flex-col items-start space-y-3">
+          <div class="w-full lg:w-8/12 flex flex-col items-start space-y-3">
             <!-- card icon -->
-            <div class="flex flex-row items-center justify-center space-x-4">
+            <div class="flex flex-row items-center justify-center space-x-4 pt-1">
               <div class="flex items-center justify-center space-x-2">
                 <i class="fa-solid fa-star text-amber-400"></i> 
-                <p>5.0</p>
+                <p>4.5</p>
               </div>
               <div class="flex items-center justify-center space-x-2">
                 <i class="fa-regular fa-eye"></i>
-                <p>20</p>
+                <p>100</p>
               </div>
               <div class="flex items-center justify-center space-x-2">
                 <i class="fa-regular fa-heart"></i>
-                <p>200</p>
+                <p>500</p>
               </div>
             </div>
             <!-- card content -->
             <h2 class="card-title text-xl font-extrabold">World Cup Flag Football</h2>
-            <p class="font-medium opacity-90 ">This flag is made by Garmany for 2020 world cup</p>
+            <p class="font-medium opacity-90 ">This is a flag of Manchester City.Height-width is 6/10. Quality is supper soft. </p>
             <div class="card-actions flex flex-col lg:flex-row gap-5">
-              <p class="text-[#FF4240] font-bold">Price - $25.00</p>
+              <p class="text-[#FF4240] font-bold">Price - $20.00</p>
               <div class="flex items-center space-x-2">
                 <i class="fa-solid fa-truck-fast opacity-60"></i>
-                <p class="font-medium opacity-80">Delivery Fee : Free</p>
+                <p class="font-medium opacity-80">Delivery Fee : $3.00</p>
               </div>
             </div>
           </div>
         </div>
-
-        <!-- card 03 -->
-        <div class="bg-base-100 shadow-xl flex flex-col lg:flex-row gap-5 p-6 rounded-2xl">
-          <figure class="">
-            <img src="./images/7.png" alt="jackets" class="rounded-xl" />
+          <!-- card 03 -->
+        <div class="shadow-xl flex flex-col lg:flex-row  p-6 gap-5 rounded-2xl border">
+          <figure class="w-full lg:w-4/12 flex justify-center items-center ">
+            <img src="./images/7.png" alt="jackets" class="rounded-xl w-full " />
           </figure>
-          <div class="flex flex-col items-start space-y-3">
+          <div class="w-full lg:w-8/12 flex flex-col items-start space-y-3">
             <!-- card icon -->
-            <div class="flex flex-row items-center justify-center space-x-4">
+            <div class="flex flex-row items-center justify-center space-x-4 pt-1">
               <div class="flex items-center justify-center space-x-2">
                 <i class="fa-solid fa-star text-amber-400"></i> 
                 <p>5.0</p>
               </div>
               <div class="flex items-center justify-center space-x-2">
                 <i class="fa-regular fa-eye"></i>
-                <p>20</p>
+                <p>2000</p>
               </div>
               <div class="flex items-center justify-center space-x-2">
                 <i class="fa-regular fa-heart"></i>
-                <p>200</p>
+                <p>1800</p>
               </div>
             </div>
             <!-- card content -->
             <h2 class="card-title text-xl font-extrabold">Cap For Hockeys</h2>
-            <p class="font-medium opacity-90 ">Dolor sit amet consectetur. Ut urna diam quis sagittis. </p>
+            <p class="font-medium opacity-90 ">It is a beautiful cap for hockey players with Orange colour.For both mans and womens.</p>
             <div class="card-actions flex flex-col lg:flex-row gap-5">
-              <p class="text-[#FF4240] font-bold">Price - $10.00</p>
+              <p class="text-[#FF4240] font-bold">Price - $18.00</p>
               <div class="flex items-center space-x-2">
                 <i class="fa-solid fa-truck-fast opacity-60"></i>
-                <p class="font-medium opacity-80">Delivery Fee : Free</p>
+                <p class="font-medium opacity-80">Delivery Fee : free</p>
               </div>
             </div>
           </div>
         </div>
-
-        <!-- card 04 -->
-        <div class="bg-base-100 shadow-xl flex flex-col lg:flex-row gap-5 p-6 rounded-2xl">
-          <figure class="">
-            <img src="./images/8.png" alt="jackets" class="rounded-xl" />
+          <!-- card 04 -->
+        <div class="shadow-xl flex flex-col lg:flex-row  p-6 gap-5 rounded-2xl border">
+          <figure class="w-full lg:w-4/12 flex justify-center items-center ">
+            <img src="./images/8.png" alt="jackets" class="rounded-xl w-full " />
           </figure>
-          <div class="flex flex-col items-start space-y-3">
+          <div class="w-full lg:w-8/12 flex flex-col items-start space-y-3">
             <!-- card icon -->
-            <div class="flex flex-row items-center justify-center space-x-4">
+            <div class="flex flex-row items-center justify-center space-x-4 pt-1">
               <div class="flex items-center justify-center space-x-2">
                 <i class="fa-solid fa-star text-amber-400"></i> 
                 <p>5.0</p>
               </div>
               <div class="flex items-center justify-center space-x-2">
                 <i class="fa-regular fa-eye"></i>
-                <p>20</p>
+                <p>280</p>
               </div>
               <div class="flex items-center justify-center space-x-2">
                 <i class="fa-regular fa-heart"></i>
-                <p>200</p>
+                <p>250</p>
               </div>
             </div>
             <!-- card content -->
             <h2 class="card-title text-xl font-extrabold">World Cup Jersey Football</h2>
-            <p class="font-medium opacity-90 ">Dolor sit amet consectetur. Ut urna diam quis sagittis. </p>
+            <p class="font-medium opacity-90 ">It is a beautiful jersey made by Garmany. It is the super standard quality Jersey.</p>
             <div class="card-actions flex flex-col lg:flex-row gap-5">
               <p class="text-[#FF4240] font-bold">Price - $35.00</p>
               <div class="flex items-center space-x-2">
@@ -366,67 +363,65 @@
             </div>
           </div>
         </div>
-
-        <!-- card 05 -->
-        <div class="bg-base-100 shadow-xl flex flex-col lg:flex-row gap-5 p-6 rounded-2xl">
-          <figure class="">
-            <img src="./images/9.png" alt="jackets" class="rounded-xl" />
+          <!-- card 05 -->
+        <div class="shadow-xl flex flex-col lg:flex-row  p-6 gap-5 rounded-2xl border">
+          <figure class="w-full lg:w-4/12 flex justify-center items-center ">
+            <img src="./images/9.png" alt="jackets" class="rounded-xl w-full " />
           </figure>
-          <div class="flex flex-col items-start space-y-3">
+          <div class="w-full lg:w-8/12 flex flex-col items-start space-y-3">
             <!-- card icon -->
-            <div class="flex flex-row items-center justify-center space-x-4">
+            <div class="flex flex-row items-center justify-center space-x-4 pt-1">
               <div class="flex items-center justify-center space-x-2">
                 <i class="fa-solid fa-star text-amber-400"></i> 
-                <p>5.0</p>
+                <p>4.2</p>
               </div>
               <div class="flex items-center justify-center space-x-2">
                 <i class="fa-regular fa-eye"></i>
-                <p>20</p>
+                <p>30</p>
               </div>
               <div class="flex items-center justify-center space-x-2">
                 <i class="fa-regular fa-heart"></i>
-                <p>200</p>
+                <p>100</p>
               </div>
             </div>
             <!-- card content -->
-            <h2 class="card-title text-xl font-extrabold">Hamlet For Hockey</h2>
-            <p class="font-medium opacity-90 ">This is very premium quality hamlet, </p>
+            <h2 class="card-title text-xl font-extrabold">Hamlet for Hockey</h2>
+            <p class="font-medium opacity-90 ">It's a very strong hamlet With very impressive durability.Hockey players easily used this type of hamlet.</p>
             <div class="card-actions flex flex-col lg:flex-row gap-5">
-              <p class="text-[#FF4240] font-bold">Price - $28.00</p>
+              <p class="text-[#FF4240] font-bold">Price - $30.00</p>
               <div class="flex items-center space-x-2">
                 <i class="fa-solid fa-truck-fast opacity-60"></i>
-                <p class="font-medium opacity-80">Delivery Fee : Free</p>
+                <p class="font-medium opacity-80">Delivery Fee : $free</p>
               </div>
             </div>
           </div>
         </div>
-
-        <!-- card 06 -->
-        <div class="bg-base-100 shadow-xl flex flex-col lg:flex-row gap-5 p-6 rounded-2xl">
-          <figure class="">
-            <img src="./images/10.png" alt="jackets" class="rounded-xl" />
+          <!-- card 06 -->
+        <div class="shadow-xl flex flex-col lg:flex-row  p-6 gap-5 rounded-2xl border">
+          <figure class="w-full lg:w-4/12 flex justify-center items-center ">
+            <img src="./images/10.png" alt="jackets" class="rounded-xl w-full " />
           </figure>
-          <div class="flex flex-col items-start space-y-3">
+          <div class="w-full lg:w-8/12 flex flex-col items-start space-y-3">
             <!-- card icon -->
-            <div class="flex flex-row items-center justify-center space-x-4">
+            <div class="flex flex-row items-center justify-center space-x-4 pt-1">
               <div class="flex items-center justify-center space-x-2">
                 <i class="fa-solid fa-star text-amber-400"></i> 
-                <p>5.0</p>
+                <p>4.8</p>
               </div>
               <div class="flex items-center justify-center space-x-2">
                 <i class="fa-regular fa-eye"></i>
-                <p>20</p>
+                <p>80</p>
               </div>
               <div class="flex items-center justify-center space-x-2">
                 <i class="fa-regular fa-heart"></i>
-                <p>200</p>
+                <p>300</p>
               </div>
             </div>
             <!-- card content -->
-            <h2 class="card-title text-xl font-extrabold">World Cup Flags Football</h2>
-            <p class="font-medium opacity-90 ">This is very Gorgeous and beautiful flag  </p>
+            <h2 class="card-title text-xl font-extrabold">World Cup Football</h2>
+            <p class="font-medium opacity-90 ">This is a football of World Cup 2000 made by Turkey.You can buy it with impressive price. </p>
             <div class="card-actions flex flex-col lg:flex-row gap-5">
-              <p class="text-[#FF4240] font-bold">Price - $15.00</p>
+              <p class="text-[#FF4240] font-bold">Price - $20.00</p>
               <div class="flex items-center space-x-2">
                 <i class="fa-solid fa-truck-fast opacity-60"></i>
                 <p class="font-medium opacity-80">Delivery Fee : $2.00</p>
@@ -434,6 +429,8 @@
             </div>
           </div>
         </div>
+        
+
 
       </div>
 
