--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@
       <!-- card container -->
       <div class="grid grid-cols-1 lg:grid-cols-2 gap-5 mt-8 lg:mt-12">
           <!-- card 01 -->
-        <div class="shadow-xl flex flex-col lg:flex-row  p-6 gap-5 rounded-2xl border">
+        <div class="shadow-md flex flex-col lg:flex-row  p-6 gap-5 rounded-2xl border">
           <figure class="w-full lg:w-4/12 flex justify-center items-center ">
             <img src="./images/5.png" alt="jackets" class="rounded-xl w-full " />
           </figure>
@@ -265,7 +265,7 @@
           </div>
         </div>
           <!-- card 02 -->
-        <div class="shadow-xl flex flex-col lg:flex-row  p-6 gap-5 rounded-2xl border">
+        <div class="shadow-md flex flex-col lg:flex-row  p-6 gap-5 rounded-2xl border">
           <figure class="w-full lg:w-4/12 flex justify-center items-center ">
             <img src="./images/6.png" alt="jackets" class="rounded-xl w-full " />
           </figure>
@@ -298,7 +298,7 @@
           </div>
         </div>
           <!-- card 03 -->
-        <div class="shadow-xl flex flex-col lg:flex-row  p-6 gap-5 rounded-2xl border">
+        <div class="shadow-md flex flex-col lg:flex-row  p-6 gap-5 rounded-2xl border">
           <figure class="w-full lg:w-4/12 flex justify-center items-center ">
             <img src="./images/7.png" alt="jackets" class="rounded-xl w-full " />
           </figure>
@@ -331,7 +331,7 @@
           </div>
         </div>
           <!-- card 04 -->
-        <div class="shadow-xl flex flex-col lg:flex-row  p-6 gap-5 rounded-2xl border">
+        <div class="shadow-md flex flex-col lg:flex-row  p-6 gap-5 rounded-2xl border">
           <figure class="w-full lg:w-4/12 flex justify-center items-center ">
             <img src="./images/8.png" alt="jackets" class="rounded-xl w-full " />
           </figure>
@@ -364,7 +364,7 @@
           </div>
         </div>
           <!-- card 05 -->
-        <div class="shadow-xl flex flex-col lg:flex-row  p-6 gap-5 rounded-2xl border">
+        <div class="shadow-md flex flex-col lg:flex-row  p-6 gap-5 rounded-2xl border">
           <figure class="w-full lg:w-4/12 flex justify-center items-center ">
             <img src="./images/9.png" alt="jackets" class="rounded-xl w-full " />
           </figure>
@@ -397,7 +397,7 @@
           </div>
         </div>
           <!-- card 06 -->
-        <div class="shadow-xl flex flex-col lg:flex-row  p-6 gap-5 rounded-2xl border">
+        <div class="shadow-md flex flex-col lg:flex-row  p-6 gap-5 rounded-2xl border">
           <figure class="w-full lg:w-4/12 flex justify-center items-center ">
             <img src="./images/10.png" alt="jackets" class="rounded-xl w-full " />
           </figure>
@@ -429,9 +429,6 @@
             </div>
           </div>
         </div>
-        
-
-
       </div>
 
     </div>
@@ -441,7 +438,99 @@
 
   </section>
 
+  <!-- section 04 Clients Question -->
 
+  <section class="container mt-14 md:mt-20 lg:mt-24 w-10/12 mx-auto">
+    <div>
+      <div class="flex flex-col gap-4 md:gap-5 lg:gap-6 justify-center items-center text-center border-y border-dashed border-[#13131833] py-6 lg:py-8">
+        <h3 class="text-xl lg:text-4xl font-extrabold">Clients Question</h3>
+        <p class="font-medium opacity-80 text-sm lg:text-base px-8 lg:px-60">You can find many questions and answers in given bellow.If you have any question or any problems, you can discuss with us. So see the description box.</p>
+      </div>
+      <!-- content -->
+      <div class="p-6 lg:p-8 rounded-2xl flex flex-col lg:flex-row gap-8 border mt-7 lg:mt-10">
+
+        <div class="w-full lg:w-5/12">
+          <img src="./images/11.png" alt="" class="w-full">
+        </div>
+        <!-- Accordion -->
+        <div class="w-full lg:w-7/12">
+          <div class="join join-vertical w-full space-y-2">
+
+            <div class="collapse collapse-arrow join-item border-b border-base-300">
+              <input type="radio" name="my-accordion-4" checked="checked" /> 
+              <div class="collapse-title text-xl font-bold">
+                Our Equipment
+              </div>
+              <div class="collapse-content"> 
+                <p class="text-sm lg:text-base opacity-70">First kind of equipment is needed for any kind of games.We provide the best equipments for our players.</p>
+              </div>
+            </div>
+            <div class="collapse collapse-arrow join-item border-b border-base-300">
+              <input type="radio" name="my-accordion-4" checked="checked" /> 
+              <div class="collapse-title text-xl font-bold">
+                Hockey Training
+              </div>
+              <div class="collapse-content"> 
+                <p class="text-sm lg:text-base opacity-70">proper training makes a player perfect.</p>
+              </div>
+            </div>
+            <div class="collapse collapse-arrow join-item border-b border-base-300">
+              <input type="radio" name="my-accordion-4" checked="checked" /> 
+              <div class="collapse-title text-xl font-bold">
+                Private Lessons
+              </div>
+              <div class="collapse-content"> 
+                <p class="text-sm lg:text-base opacity-70">We observe all players.And make sure to keep them a good guideline.</p>
+              </div>
+            </div>
+            <div class="collapse collapse-arrow join-item border-b border-base-300">
+              <input type="radio" name="my-accordion-4" checked="checked" /> 
+              <div class="collapse-title text-xl font-bold">
+                Ski Touring
+              </div>
+              <div class="collapse-content"> 
+                <p class="text-sm lg:text-base opacity-70">It is very important for hooky. We arrange this for all players.</p>
+              </div>
+            </div>
+            <div class="collapse collapse-arrow join-item border-b border-base-300">
+              <input type="radio" name="my-accordion-4" checked="checked" /> 
+              <div class="collapse-title text-xl font-bold">
+                Booking
+              </div>
+              <div class="collapse-content"> 
+                <p class="text-sm lg:text-base opacity-70">Knowledge is power.We give them important tips and guideline about Hockey</p>
+              </div>
+            </div>
+            <div class="collapse collapse-arrow join-item ">
+              <input type="radio" name="my-accordion-4" checked="checked" /> 
+              <div class="collapse-title text-xl font-bold">
+                Pricings
+              </div>
+              <div class="collapse-content"> 
+                <p class="text-sm lg:text-base opacity-70">We always try to provide quality equipment in a good pricing.</p>
+              </div>
+            </div>
+           
+          </div>
+        </div>
+
+      </div>
+    </div>
+  </section>
+
+  <!-- section 05 Get In Touch -->
+  <section class="container mt-14 md:mt-20 lg:mt-28 w-10/12 mx-auto">
+    <div>
+      <div class="flex flex-col gap-4 md:gap-5 lg:gap-6 justify-center items-center text-center border-y border-dashed border-[#13131833] py-6 lg:py-8">
+        <h3 class="text-xl lg:text-4xl font-extrabold">Clients Question</h3>
+        <p class="font-medium opacity-80 text-sm lg:text-base px-8 lg:px-60">You can find many questions and answers in given bellow.If you have any question or any problems, you can discuss with us. So see the description box.</p>
+      </div>
+      <!-- content -->
+
+
+
+    </div>
+  </section>
 
 </body>
 
