--- a/index.html
+++ b/index.html
@@ -33,10 +33,6 @@
   <!-- font awesome -->
   <script src="https://kit.fontawesome.com/808a676d10.js" crossorigin="anonymous"></script>
 
-
-
-
-
 </head>
 
 <body class="font-manrope overflow-x-hidden">
@@ -81,7 +77,7 @@
   </section>
 
   <!-- banner section -->
-  <section class="container w-10/12 mx-auto">
+  <section class="container w-10/12 mx-auto relative">
 
     <div class="carousel w-full">
       <div id="slide1" class="carousel-item relative w-full">
@@ -117,13 +113,17 @@
         </div>
       </div>
     </div>
+
+    <div class="bg-[#131318] rounded-2xl p-4 md:p-6 lg:p-8 space-y-2 lg:space-y-4 text-white mt-4 lg:max-w-[30rem] lg:absolute lg:bottom-8 lg:right-8">
+      <h3 class="font-extrabold text-lg lg:text-2xl">Meet all the players from the field</h3>
+      <p class="font-medium text-sm lg:text-base opacity-80">Communicate with our hockey players by using your gmail and user password; Login now.</p>
+    </div>
   </section>
 
   <!-- section-01 professional Hockeys Club -->
   <section class="container mt-14 md:mt-20 lg:mt-24 w-10/12 mx-auto">
     <div>
-      <div
-        class="flex flex-col gap-4 md:gap-5 lg:gap-6 justify-center items-center text-center border-y border-dashed border-[#13131833] py-6 lg:py-8">
+      <div class="flex flex-col gap-4 md:gap-5 lg:gap-6 justify-center items-center text-center border-y border-dashed border-[#39394333] py-6 lg:py-8">
         <h3 class="text-xl lg:text-4xl font-extrabold">Professional Hockeys Club</h3>
         <p class="font-medium text-sm lg:text-base px-8 lg:px-60">Hockey is popular in every corner of the world. Here
           are some summary of professional Hockie's club.</p>
@@ -448,16 +448,10 @@
           </div>
         </div>
       </div>
-
     </div>
-
-
-
-
   </section>
 
   <!-- section 04 Clients Question -->
-
   <section class="container mt-14 md:mt-20 lg:mt-24 w-10/12 mx-auto">
     <div>
       <div
@@ -556,7 +550,7 @@
       <!-- content -->
 
 
-
+      
     </div>
   </section>
 
