--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
 </head>
 
-<body class="font-manrope overflow-x-hidden">
+<body class="font-manrope overflow-x-hidden bg-white">
   <!--  nav bar  -->
   <section class="container my-7 md:my-9 lg:my-12 w-10/12 mx-auto">
     <div class="navbar bg-base-100">
